updated the package.json, reactive.json, extension.ts to work completely with stage1

--- a/package.json
+++ b/package.json
@@ -45,6 +45,14 @@
       {
         "command": "reactive.createReactiveReact",
         "title": "Insert Reactive React Function"
+      },
+      {
+        "command": "reactive.createReactiveUnsubscribe",
+        "title": "Insert Reactive Unsubscribe Function"
+      },
+      {
+        "command": "reactive.insertReactiveConstants",
+        "title": "Insert Reactive Constants"
       }
     ]
   },
